[package]
name = "icon-loader"
version = "0.2.1"
authors = ["Malte Veerman <malte.veerman@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Crate to load and cache themed icons in 100% safe rust."
repository = "https://gitlab.com/Maldela/rust-icon-loader"
readme = "README.md"
keywords = ["icon", "theme", "laoder"]
categories = ["caching"]

[badges]
gitlab = { repository = "https://gitlab.com/Maldela/rust-icon-loader", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["kde", "gtk"]

# Adds the ability to read the default theme name from '~/.config/kdeglobals'.
kde = []

# Adds the ability to read the default theme name from '~/.config/gtk-3.0/settings.ini'.
gtk = []

[dependencies]
xdg = "2.2"
rust-ini = "0.15"
dashmap = "3.11"
