[package]
name = "icon-loader"
version = "0.3.4"
authors = ["Malte Veerman <malte.veerman@gmail.com>"]
license = "MIT"
edition = "2018"
description = "Crate to load and cache themed icons in 100% safe rust."
repository = "https://gitlab.com/Maldela/rust-icon-loader"
readme = "README.md"
keywords = ["icon", "theme", "loader"]
categories = ["caching"]

[badges]
gitlab = { repository = "https://gitlab.com/Maldela/rust-icon-loader", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = ["kde", "gtk"]

# Adds the ability to read the default theme name from '~/.config/kdeglobals'.
kde = []

# Adds the ability to read the default theme name from '~/.config/gtk-3.0/settings.ini'.
gtk = []

# Log icon theme error messages. Only useful for debugging malformed icon themes.
theme_error_log = ["log"]

[dependencies]
xdg = "2.2"
rust-ini = "0.16"
dashmap = "4.0"
log = { version = "0.4", optional = true }
